Layout adaptive version, geometry (footer, modal, portfolio)

--- a/index.html
+++ b/index.html
@@ -16,38 +16,38 @@
   <!--hat-->
   <header>
     <div class="container header">
-      <a href="" class="logo link"><span class="accent-logo">Web</span>Studio</a>
-      <nav>
-          <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li class="item"><a href="" class="link">Контакты</a></li>
+        <a href="" class="logo link"><span class="accent-logo">Web</span>Studio</a>
+        <nav>
+            <ul class="site-nav list">
+              <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+              <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+              <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link contact">
+              <svg width="16" height="12" class="icon-contact"><use href="./images/sprite.svg#icon-letter"></use></svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="item">
+            <a href="tel:+38-096-111-11-11" class="link contact">
+              <svg width="10" height="16" class="icon-contact">
+                <use href="./images/sprite.svg#icon-tel"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="link contact">
-            <svg width="16" height="12" class="icon-contact"><use href="./images/sprite.svg#icon-letter"></use></svg>
-            info@devstudio.com
-          </a>
-        </li>
-        <li class="item">
-          <a href="tel:+38-096-111-11-11" class="link contact">
-            <svg width="10" height="16" class="icon-contact">
-              <use href="./images/sprite.svg#icon-tel"></use>
-            </svg>
-            +38 096 111 11 11
-          </a>
-        </li>
-      </ul>
-      <button type="button" class="button-menu is-open" aria-expanded="false" aria-controls="menu-container" data-menu-button>
-        <svg width="40" height="40" aria-label="Mobile menu">
-          <use class="icon-close" href="./images/sprite.svg#icon-close_40px"></use>
-          <use class="icon-menu" href="./images/sprite.svg#icon-menu_40px"></use>
-        </svg>
-      </button>
-      <!-- menu-container -->
-        <div class="menu-container" id="menu-container" data-menu>
+        <button type="button" class="button-menu is-open" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+          <svg class="input" width="40" height="40" aria-label="Mobile menu">
+            <use class="icon-close" href="./images/sprite.svg#icon-close_40px"></use>
+            <use class="icon-menu" href="./images/sprite.svg#icon-menu_40px"></use>
+          </svg>
+        </button>
+        <!-- menu-container -->
+         <div class="menu-container" id="menu-container" data-menu>
            <nav>
               <ul class="site-menu list">
                 <li class="item menu"><a href="./index.html" class="link current">Студия</a></li>
@@ -122,7 +122,7 @@
               
               <li class="list">
                 <label class="field-form">Комментарий
-                <textarea name="comment" cols="30" rows="10" placeholder="Введите текст" class="textarea-form"></textarea>
+                <textarea name="comment"  rows="7" placeholder="Введите текст" class="textarea-form"></textarea>
                 </label>
               </li>
             </ul>
@@ -131,7 +131,7 @@
               <label class="checkbox-label">
               <input class="checkbox" type="checkbox" name="checkbox">
               <span class="checkbox-icon"></span>
-              Соглашаюсь с рассылкой и принимаю <a href="#" class="link-field-form">Условия договора</a>
+              Соглашаюсь с рассылкой и принимаю <a href="#" class="link-field-form"> Условия договора</a>
               </label>
             </div>
             <div><button type="submit" class="button">Отправить</button></div>
