--- a/portfolio.html
+++ b/portfolio.html
@@ -51,6 +51,56 @@
             </a>
           </li>
         </ul>
+        <button
+          type="button"
+          class="button-menu is-open"
+          aria-expanded="false"
+          aria-controls="menu-container"
+          data-menu-button
+        >
+          <svg class="input" width="40" height="40" aria-label="Mobile menu">
+            <use
+              class="icon-close"
+              href="./images/sprite.svg#icon-close_40px"
+            ></use>
+            <use
+              class="icon-menu"
+              href="./images/sprite.svg#icon-menu_40px"
+            ></use>
+          </svg>
+        </button>
+        <!-- menu-container -->
+        <div class="menu-container" id="menu-container" data-menu>
+          <nav>
+            <ul class="site-menu list">
+              <li class="item menu">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="item menu">
+                <a href="./portfolio.html" class="link current">Портфолио</a>
+              </li>
+              <li class="item menu"><a href="" class="link">Контакты</a></li>
+            </ul>
+          </nav>
+          <ul class="contacts-menu list">
+            <li class="item menu">
+              <a href="mailto:info@devstudio.com" class="link contact">
+                <svg width="16" height="12" class="icon-contact">
+                  <use href="./images/sprite.svg#icon-letter"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="item menu">
+              <a href="tel:+38-096-111-11-11" class="link contact">
+                <svg width="10" height="16" class="icon-contact">
+                  <use href="./images/sprite.svg#icon-tel"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -384,5 +434,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
